tests/field/get_on_bool.rev
true.foo // error: only structure instances have properties